# oubliette-dungeon

./: .gitignore  CHANGELOG.md  README.md  REVIEW-log-anomaly-detection-system.md  SECURITY.md  action.yml  fly.toml  pyproject.toml
.github/workflows/: action-test.yml  ci.yml  release.yml
benchmarks/: README.md  benchmark_anthropic.json  benchmark_gemini.json  benchmark_ollama.json  benchmark_openai.json  shield_comparison.json
contrib/garak/: README.md  oubliette_adversarial.py  oubliette_detector.py
contrib/inspect_evals/oubliette_adversarial/: oubliette_adversarial.py
contrib/inspect_evals/tests/: test_end_to_end.py  test_scorer.py
dashboard/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
dashboard/src/: App.tsx
dashboard/src/api/: client.ts
dashboard/src/hooks/: useApi.ts
dashboard/src/pages/: CommandCenter.tsx  ProviderComparison.tsx  Reports.tsx  ScenarioLibrary.tsx  Scheduler.tsx  SessionDetail.tsx
docker/: Dockerfile  docker-compose.yml
examples/: basic_usage.py  custom_scenarios.yaml  multi_provider.py
reports/: 2026-07-20-model-freshness.md
scripts/: benchmark_paper.py
src/oubliette_dungeon/: __init__.py  auth_middleware.py  license.py  license_issuer.py  license_webhook.py  metering.py  model_config.py  rbac.py  tenant.py
src/oubliette_dungeon/api/: __init__.py  app.py  middleware.py
src/oubliette_dungeon/cli/: __init__.py  main.py
src/oubliette_dungeon/compat/: __init__.py  promptfoo.py
tests/: conftest.py
tests/unit/: test_api_comparisons.py  test_api_osef.py  test_comparison.py  test_crescendo_scenarios.py  test_dashboard_meta.py  test_evaluator.py  test_executor.py  test_hitl.py  test_inspect_adapter.py  test_license_sdk.py  test_license_webhook.py  test_loader.py  test_metering_negative_quantity.py  test_models.py  test_nist_rmf.py  test_offline.py  test_orchestrator.py  test_osef.py  test_promptfoo_compat.py  test_scheduler.py  test_sec_review_20260702.py  test_storage.py  test_tools.py
(+41 files in other folders)
